<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GKI PAD</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_entry">EntryActivity</string>
    <string name="title_activity_dailywork_input">DailyworkInputActivity</string>
    <string name="title_activity_staff_input">StaffInputActivity</string>
    <string name="title_activity_ruler_table">RulerTableActivity</string>
    <string name="title_activity_status_feed_back">StatusFeedBackActivity</string>
    <string name="title_activity_overtime_confm">OvertimeConfmActivity</string>

    <string-array name="tag_names">
        <!-- <item>原材料不良：</item> -->
        <!-- <item>设备不良：</item> -->
        <!-- <item>操作不良：</item> -->
        <!-- <item>设备故障停止时间：</item> -->
        <!-- <item>计划停止时间：</item> -->
        <!-- <item>试做停止时间：</item> -->
        <!-- <item>模具交换停止时间：</item> -->
        <!-- <item>其它停止时间：</item> -->
        <!-- <item>电力停止时间：</item> -->
        <!-- <item>品质确认停止时间：</item> -->
        <!-- <item>其他停止时间：</item> -->
        <!-- <item>试做不良：</item> -->
    </string-array>

    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_staff_input_item">StaffInputItemActivity</string>
    <string name="title_activity_daily_query">DailyQueryActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_padmessage_list">消息列表</string>
    <string name="title_padmessage_detail">消息</string>
    <string name="text_msg1">接班生产情况</string>
    <string name="hint_build_msg">请输入留言消息</string>
    <string name="text_msg2">接班现场5S</string>
    <string name="text_msg3">接班设备情况</string>
    <string name="text_msg4">本班生产情况及现场5S</string>
    <string name="text_msg5">本班设备情况及交班情况</string>
    <string name="text_remark">备注</string>
    <string name="text_loading">载入中</string>
</resources>