<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="?android:attr/listDivider"
    android:orientation="vertical"
    android:showDividers="middle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="创建人:"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv2_message_frag_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="载入中"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="创建时间:"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv2_message_frag_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="载入中"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2_message_frag_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="编辑"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/text_msg1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/padmessage_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/melvin_button_border"
            android:imeOptions="actionNext"
            android:padding="16dp"
            android:text="@string/text_loading"
            android:textColor="@android:color/background_dark"
            android:textIsSelectable="true"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/text_msg2"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/padmessage_detail2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/melvin_button_border"
            android:imeOptions="actionNext"
            android:padding="16dp"
            android:text="@string/text_loading"
            android:textColor="@android:color/background_dark"
            android:textIsSelectable="true"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/text_msg3"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/padmessage_detail3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/melvin_button_border"
            android:imeOptions="actionNext"
            android:padding="16dp"
            android:text="@string/text_loading"
            android:textColor="@android:color/background_dark"
            android:textIsSelectable="true"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/text_msg4"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/padmessage_detail4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/melvin_button_border"
            android:imeOptions="actionNext"
            android:padding="16dp"
            android:text="@string/text_loading"
            android:textColor="@android:color/background_dark"
            android:textIsSelectable="true"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/text_msg5"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/padmessage_detail5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/melvin_button_border"
            android:imeOptions="actionNext"
            android:padding="16dp"
            android:text="@string/text_loading"
            android:textColor="@android:color/background_dark"
            android:textIsSelectable="true"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/text_remark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/padmessage_detail6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/melvin_button_border"
            android:imeOptions="actionNext"
            android:padding="16dp"
            android:text="@string/text_loading"
            android:textColor="@android:color/background_dark"
            android:textIsSelectable="true"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>
