<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gki.v107.activity.BuildMessageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="生产日期:" />

        <TextView
            android:id="@+id/tv2_message_date2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textfield_default_holo_light"
            android:text="2018-01-01"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="班次:" />

        <TextView
            android:id="@+id/tv2_message_build_shift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="白班" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="创建人：" />

        <TextView
            android:id="@+id/tv2_message_build_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/text_msg1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et2_message_build1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/melvin_button_border"
            android:hint="@string/hint_build_msg"
            android:padding="16dp"
            android:textIsSelectable="true"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/text_msg2"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et2_message_build2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/melvin_button_border"
            android:hint="@string/hint_build_msg"
            android:padding="16dp"
            android:textIsSelectable="true"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/text_msg3"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et2_message_build3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/melvin_button_border"
            android:hint="@string/hint_build_msg"
            android:padding="16dp"
            android:textIsSelectable="true"
            android:textSize="20sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/text_msg4"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et2_message_build4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/melvin_button_border"
            android:hint="@string/hint_build_msg"
            android:padding="16dp"
            android:textIsSelectable="true"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/text_msg5"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et2_message_build5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/melvin_button_border"
            android:hint="@string/hint_build_msg"
            android:padding="16dp"
            android:textIsSelectable="true"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/text_remark"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et2_message_build6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/melvin_button_border"
            android:hint="@string/hint_build_msg"
            android:padding="16dp"
            android:textIsSelectable="true"
            android:textSize="20sp" />


    </LinearLayout>

    <Button
        android:id="@+id/button2_build_message"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_dark"
        android:text="提交"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>
